tests/negative/runtime/byteat_equal_len/input.ci
void main() {
    print(toString(byteAt("abc", 3)) + "\n");
}
